fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,9 @@ img {
   }
 }
 
+.mobile-container {
+  z-index: 1;
+}
 @media screen and (max-width: 479px) {
   .mobile-container {
     padding: 34px 30px;
@@ -558,7 +561,7 @@ img {
   border: none;
   background-color: transparent;
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
 }
 @media screen and (min-width: 768px) {
   .header__button {
