--- a/sass/ui/_btn.scss
+++ b/sass/ui/_btn.scss
@@ -36,7 +36,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
 
   @media screen and (min-width: 768px) {
     display: none;
