--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -44,6 +44,7 @@ img {
 }
 
 .mobile-container {
+  z-index: 1;
   @media screen and(max-width:479px) {
     padding: 34px 30px;
   }
